--- a/src/components/Gooey.css
+++ b/src/components/Gooey.css
@@ -1,11 +1,11 @@
-/* .gooey-wrapper {
+.gooey-wrapper {
   background-image: linear-gradient(140deg, #e2e2e2, #cdcdcd);
   display: grid;
   place-items: center;
   font-family: "Lato", Arial, sans-serif;
   height: 100vh;
   margin: 0;
-} */
+}
 
 svg {
   display: none;
@@ -32,6 +32,7 @@ svg {
 .dropdown__arrow {
   border-bottom: 2px solid #000;
   border-right: 2px solid #000;
+
   position: absolute;
   top: 50%;
   right: 30px;
