--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Londrina+Shadow&display=swap");
 
 @tailwind base;
 @tailwind components;
